examples/test/testpolicy18436.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18436
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key1: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value44
          key2: value38
          key31: value36
      podSelector:
        matchLabels:
          key0: value40
          key29: value16
